# ecommerce-microservices

backend/api-gateway/: go.mod  main.go
backend/cart/: .env  index.js  package-lock.json  package.json
backend/cart-fastapi/: .env  pyproject.toml
backend/cart-fastapi/app/: main.py
backend/cart/models/: cart.js
backend/cart/routes/: cart.js
backend/inventory-fastapi/: .env  pyproject.toml
backend/inventory-fastapi/alembic/: env.py
backend/inventory-service/: index.js  package-lock.json  package.json
backend/inventory-service/models/: Inventory.js
backend/inventory-service/routes/: inventory.js
backend/product/: api.http  go.mod  go.sum
backend/product-fastapi/: .env  pyproject.toml
backend/product-fastapi/alembic/: env.py
backend/product-fastapi/alembic/versions/: 18dccc749b29_initial_migration.py
backend/product-fastapi/app/: main.py  models.py
backend/product-fastapi/app/api/: main.py
backend/product-fastapi/app/api/routes/: categories.py  category.py  healthcheck.py  product.py
backend/product-fastapi/app/core/: db.py
backend/product-fastapi/app/models/: category.py  product.py
backend/product/migrations/: 000001_create_categories_table.up.sql
backend/user/: index.js  package-lock.json  package.json
backend/user-fastapi/: .env  alembic.ini  main.py  pyproject.toml
backend/user/middleware/: auth.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend_test/: index.html  package-lock.json  package.json
frontend_test/src/: App.jsx
product/: api.http  go.mod  go.sum
(+107 files in other folders)
