[project]
name = "product-fastapi"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.9.1",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "asyncpg>=0.31.0",
    "alembic>=1.15.2",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.38",
]
